--- a/.github/workflows/delete_diffs.yaml
+++ b/.github/workflows/delete_diffs.yaml
@@ -4,7 +4,7 @@ on:
   workflow_call:
 
 jobs:
-  # If a comment with the keyword `delete_diffs` is added to the PR,
+  # If a comment with the keyword `/deletediffs` is added to the PR,
   # the job gets all the installations and feeds them to the next job
   # that removes the installations diffs from the PR.
   delete-diffs:
