--- a/extras/flux/patch-gitrepository-mcf-private.yaml
+++ b/extras/flux/patch-gitrepository-mcf-private.yaml
@@ -6,4 +6,4 @@ metadata:
 spec:
   secretRef:
     name: giantswarm-clusters-ssh-credentials
-  url: ssh://ssh.github.com:8081/giantswarm/${customer_codename}-management-clusters.git
+  url: ssh://git@ssh.github.com:8081/giantswarm/${customer_codename}-management-clusters.git
