--- a/extras/flux/patch-gitrepository-mcf.yaml
+++ b/extras/flux/patch-gitrepository-mcf.yaml
@@ -6,4 +6,4 @@ metadata:
 spec:
   secretRef:
     name: giantswarm-clusters-ssh-credentials
-  url: ssh://github.com/giantswarm/${customer_codename}-management-clusters.git
+  url: ssh://git@ssh.github.com:443/giantswarm/${customer_codename}-management-clusters.git
