--- a/bases/provider/aws/kustomization.yaml
+++ b/bases/provider/aws/kustomization.yaml
@@ -17,4 +17,6 @@ replacements:
           - spec.url
 resources:
 - configmap-provider-data.yaml
+- loki.yaml
+patchesStrategicMerge:
 - hello-loki.svc.yaml
