loki config for gauss - misses templating to fit any install

--- a/bases/provider/aws/kustomization.yaml
+++ b/bases/provider/aws/kustomization.yaml
@@ -17,6 +17,4 @@ replacements:
           - spec.url
 resources:
 - configmap-provider-data.yaml
-- loki.yaml
-patchesStrategicMerge:
-- hello-loki.svc.yaml
+# - loki.yaml
