--- a/bases/provider/aws-china/patch-kustomize-controller.yaml
+++ b/bases/provider/aws-china/patch-kustomize-controller.yaml
@@ -13,3 +13,6 @@ spec:
       - ip: "192.168.190.101"
         hostnames:
         - "giantswarm.github.io"
+      - ip: "192.168.190.103"
+        hostnames:
+        - "raw.githubusercontent.com"
