--- a/bases/provider/aws-china/patch-source-controller.yaml
+++ b/bases/provider/aws-china/patch-source-controller.yaml
@@ -10,3 +10,6 @@ spec:
       - ip: "192.168.190.101"
         hostnames:
         - "giantswarm.github.io"
+      - ip: "192.168.190.102"
+        hostnames:
+        - "ssh.github.com"
