add PSS exception for kustomize-controller

--- a/bases/flux-app/giantswarm/kustomization.yaml
+++ b/bases/flux-app/giantswarm/kustomization.yaml
@@ -163,3 +163,4 @@ resources:
 - resource-namespace.yaml
 - resource-rbac.yaml
 - resource-refresh-vault-token.yaml
+- resource-kyverno-policy-exception.yaml
