--- a/bases/flux-app/giantswarm/resource-kyverno-policy-exception.yaml
+++ b/bases/flux-app/giantswarm/resource-kyverno-policy-exception.yaml
@@ -2,7 +2,7 @@ apiVersion: kyverno.io/v2alpha1
 kind: PolicyException
 metadata:
   name: giantswarm-kustomize-controller
-  namespace: flux-giantswarm
+  namespace: giantswarm
 spec:
   exceptions:
   - policyName: disallow-host-path
