--- a/extras/crossplane/providers/upbound/azure/controller-config.yaml
+++ b/extras/crossplane/providers/upbound/azure/controller-config.yaml
@@ -7,5 +7,4 @@ metadata:
 spec:
   args:
     - --debug
-  image: docker.io/giantswarm/upbound-provider-azure:v0.33.0
-  serviceAccountName: upbound-provider-azure
+  serviceAccountName: upbound-provider
