Improve bases structure for management of crossplane providers (#23)
This PR changes to the crossplane provider bases to allow the Provider
and ControllerConfig to be used as bases for provider families.

- Removes the cloud specific service accounts
- creates a single `upbound-provider` service account as part of the
primary crossplane deployment
- modifies the ControllerConfig for each cloud provider to enable the
new service account and remove the giantswarm specific provider image.

--- a/extras/crossplane/service-account.yaml
+++ b/extras/crossplane/service-account.yaml
@@ -2,18 +2,18 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: upbound-provider-azure
+  name: upbound-provider
   namespace: crossplane
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: crossplane-use-psp-upbound-provider-azure
+  name: crossplane-use-psp-upbound-provider
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: crossplane-use-psp
 subjects:
 - kind: ServiceAccount
-  name: upbound-provider-azure
+  name: upbound-provider
   namespace: crossplane
