comment out SA for crossplane

--- a/extras/crossplane/helmrelease-crossplane.yaml
+++ b/extras/crossplane/helmrelease-crossplane.yaml
@@ -16,14 +16,14 @@ spec:
   install:
     remediation:
       retries: 10
-      remediateLastFailure: False
+      remediateLastFailure: false
   interval: 1m
   targetNamespace: crossplane
   timeout: 10m
   upgrade:
     remediation:
       retries: 10
-      remediateLastFailure: False
+      remediateLastFailure: false
   values:
     giantswarm:
       kubernetes:
