--- a/extras/crossplane/providers/upbound/aws/service-account.yaml
+++ b/extras/crossplane/providers/upbound/aws/service-account.yaml
@@ -2,8 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: upbound-provider
+  name: "replaced by kustomization"
   namespace: crossplane
+  annotations: {}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -15,5 +16,5 @@ roleRef:
   name: crossplane-use-psp
 subjects:
 - kind: ServiceAccount
-  name: upbound-provider
+  name: "replaced by kustomization"
   namespace: crossplane
