Crossplane provider documentation (#29)
This PR splits some documentation from
[`crossplane-examples/aws-provider/postgresdb`](https://github.com/giantswarm/crossplane-examples/blob/add-aws-crossplane/aws-provider/postgresdb/README.md)
and moves it to the provider specific location inside the
`extras/crossplane` base.

Included in this PR is documentation for:

- Crossplane management cluster installation
- General guide on upbound providers
- AWS provider family members documentation
  - Installation guide for AWS provider family members
  - Installation instructions for IAM role
- Azure provider family members specific documentation
  - Installation guide for Azure provider family members
  - Stub for documentation on setting up WorkloadIndentity

> **Note** Azure Workload identity
>
> The document for `WorkloadIdentity` under the Azure provider is
currently intentionally blank. No PoC has been undertaken to understand
how this works with Crossplane and this must be achieved before
`WorkloadIdentity` can be documented for Azure.

## Some hints on changes to this repository

### Public information only

This is a public repository. The content and commit history is visible
to everyone.

Do not provide any **customer-specific details**. Use the customer's
repository for that.

### Descriptive PR title

Please write a descriptive pull request title. In this repo we don't
maintain a changelog file, so the PR title (becoming the commit message
after squash-merge) is the main information to understand a change in
retrospect.

---------

Co-authored-by: Laszlo Uveges <laszlo@giantswarm.io>

--- a/extras/crossplane/helmrelease-crossplane.yaml
+++ b/extras/crossplane/helmrelease-crossplane.yaml
@@ -16,22 +16,14 @@ spec:
   install:
     remediation:
       retries: 10
-      remediateLastFailure: False
+      remediateLastFailure: false
   interval: 1m
   targetNamespace: crossplane
   timeout: 10m
   upgrade:
     remediation:
       retries: 10
-      remediateLastFailure: False
+      remediateLastFailure: false
   values:
-    giantswarm:
-      kubernetes:
-        provider:
-          kind: "replaced in kustomization"
-      crossplane:
-        providers:
-          contribAws:
-            enabled: false
     metrics:
       enabled: true
