Add comments to crd related mechanism in-place

--- a/bases/flux-app/crds/kustomization.yaml
+++ b/bases/flux-app/crds/kustomization.yaml
@@ -1,4 +1,3 @@
-# Keeping it here for compatibility with the flux-app-* makefile targets
+# Keeping it here for backward compatibility
 resources:
   - crds.yaml
-
