Add trailing dot in FQDN for NTPServers
Signed-off-by: Matias Charriere <matias@giantswarm.io>

--- a/bases/catalogs/giantswarm/appcatalog-default-test.yaml
+++ b/bases/catalogs/giantswarm/appcatalog-default-test.yaml
@@ -62,4 +62,4 @@ spec:
                 TCP:
                   Disabled: false
               Hosts: "giantswarm.io.,kubernetes.default.svc.cluster.local."
-              NTPServers: "0.flatcar.pool.ntp.org,1.flatcar.pool.ntp.org"
+              NTPServers: "0.flatcar.pool.ntp.org,1.flatcar.pool.ntp.org."
