--- a/bases/flux-app-v2/customer/kustomization.yaml
+++ b/bases/flux-app-v2/customer/kustomization.yaml
@@ -1,4 +1,5 @@
-bases: []
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 helmCharts:
   - name: flux-app
     includeCRDs: false
