--- a/bases/provider/aws-china/flux-v2/kustomization.yaml
+++ b/bases/provider/aws-china/flux-v2/kustomization.yaml
@@ -1,10 +1,12 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 patches:
   - target:
       group: source.toolkit.fluxcd.io
       version: v1beta2
       kind: 'GitRepository'
       name: '.*'
-      namespace: "flux-giantswarm"
+      namespace: 'flux-giantswarm'
     patch: |-
       - op: replace
         path: "/apiVersion"
@@ -14,11 +16,14 @@ patches:
       version: v1beta2
       kind: 'Kustomization'
       name: '.*'
-      namespace: "flux-giantswarm"
+      namespace: 'flux-giantswarm'
     patch: |-
       - op: replace
         path: "/apiVersion"
         value: kustomize.toolkit.fluxcd.io/v1
+  - path: ../patch-helm-controller.yaml
+  - path: ../patch-kustomize-controller.yaml
+  - path: ../patch-source-controller.yaml
 images:
   - name: giantswarm/fluxcd-helm-controller
     newName: giantswarm-registry.cn-shanghai.cr.aliyuncs.com/giantswarm/fluxcd-helm-controller
@@ -44,10 +49,6 @@ images:
     newName: giantswarm-registry.cn-shanghai.cr.aliyuncs.com/giantswarm/external-secrets
   - name: giantswarm/fluxcd-kustomize-controller
     newName: giantswarm-registry.cn-shanghai.cr.aliyuncs.com/giantswarm/fluxcd-kustomize-controller
-patchesStrategicMerge:
-  - ../patch-helm-controller.yaml
-  - ../patch-kustomize-controller.yaml
-  - ../patch-source-controller.yaml
 replacements:
   # Points collection GitRepository to correct URL
   - source:
