--- a/bases/provider/aws/flux-v2/kustomization.yaml
+++ b/bases/provider/aws/flux-v2/kustomization.yaml
@@ -38,5 +38,4 @@ resources:
   - ../../../flux-app-v2/customer
   - ../../../flux-app-v2/giantswarm
   - ../../../flux-giantswarm-resources
-  - ../configmap-provider-data.yaml
-
+  - configmap-provider-data.yaml
