--- a/bases/provider/kvm/flux-v2/kustomization.yaml
+++ b/bases/provider/kvm/flux-v2/kustomization.yaml
@@ -1,16 +1,16 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 patches:
-  - target:
-      group: source.toolkit.fluxcd.io
-      version: v1beta2
-      kind: 'GitRepository'
-      name: '.*'
-      namespace: 'flux-giantswarm'
-    patch: |-
-      - op: replace
-        path: "/apiVersion"
-        value: source.toolkit.fluxcd.io/v1
+#  - target:
+#      group: source.toolkit.fluxcd.io
+#      version: v1beta2
+#      kind: 'GitRepository'
+#      name: '.*'
+#      namespace: 'flux-giantswarm'
+#    patch: |-
+#      - op: replace
+#        path: "/apiVersion"
+#        value: source.toolkit.fluxcd.io/v1
   - target:
       group: kustomize.toolkit.fluxcd.io
       version: v1beta2
