--- a/bases/provider/eks/helmrelease/grafana/helmrelease.yaml
+++ b/bases/provider/eks/helmrelease/grafana/helmrelease.yaml
@@ -16,7 +16,7 @@ spec:
       version: 2.5.0
       sourceRef:
         kind: HelmRepository
-        name: giantswarm-default-catalog
+        name: giantswarm-catalog
   interval: 50m
   install:
     remediation:
