--- a/bases/provider/eks/helmrelease/grafana/helmrelease.yaml
+++ b/bases/provider/eks/helmrelease/grafana/helmrelease.yaml
@@ -13,10 +13,10 @@ spec:
   chart:
     spec:
       chart: grafana
-      version: 6.59.4
+      version: 2.5.0
       sourceRef:
         kind: HelmRepository
-        name: giantswarm-default-catalog
+        name: giantswarm-catalog
   interval: 50m
   install:
     remediation:
