Fix repository in eks helm releases
Signed-off-by: QuentinBisson <quentin@giantswarm.io>

--- a/bases/provider/eks/helmrelease/grafana/helmrelease.yaml
+++ b/bases/provider/eks/helmrelease/grafana/helmrelease.yaml
@@ -17,6 +17,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: giantswarm-catalog
+        namespace: flux-giantswarm
   interval: 50m
   install:
     remediation:
