--- a/bases/provider/eks/helmrelease/observability-bundle/helmrelease.yaml
+++ b/bases/provider/eks/helmrelease/observability-bundle/helmrelease.yaml
@@ -17,6 +17,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: giantswarm-default-catalog
+        namespace: flux-giantswarm
   interval: 50m
   install:
     remediation:
@@ -41,6 +42,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: giantswarm-default-catalog
+        namespace: flux-giantswarm
   interval: 50m
   install:
     remediation:
@@ -88,6 +90,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: giantswarm-default-catalog
+        namespace: flux-giantswarm
   interval: 50m
   install:
     remediation:
