--- a/bases/provider/eks/helmrelease/vertical-pod-autoscaler/helmrelease.yaml
+++ b/bases/provider/eks/helmrelease/vertical-pod-autoscaler/helmrelease.yaml
@@ -17,6 +17,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: giantswarm-default-catalog
+        namespace: flux-giantswarm
   interval: 50m
   install:
     remediation:
