change helm repo ns for all eks helm releases

--- a/bases/provider/eks/helmrelease/metrics-server/helmrelease.yaml
+++ b/bases/provider/eks/helmrelease/metrics-server/helmrelease.yaml
@@ -17,7 +17,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: giantswarm-default-catalog
-        namespace: flux-giantswarm
+        namespace: default
   interval: 50m
   install:
     remediation:
