add values to the helm releases

--- a/bases/provider/eks/helmrelease/loki/helmrelease.yaml
+++ b/bases/provider/eks/helmrelease/loki/helmrelease.yaml
@@ -22,3 +22,7 @@ spec:
   install:
     remediation:
       retries: 3
+  valuesFrom:
+    - kind: ConfigMap
+      name: sample-customer-loki-config
+      valuesKey: values
