Refactoring crossplane structure
The overall structure for enabling crossplane made less sense in leiu of
the changes brought in by crossplane 1.14

This required some rethink of how we may handle functions, compositions
and claims, the latter two having had minimal consideration as part of
the base in the past.

This procedure is documented in the README.md underneath the
`extras/crossplane` location.

As part of these changes, we move to:

- `DeploymentRuntimeConfig` for providers
- `provider-family-[provider]` is run as its own pod with its own
  runtime config. This pod does very little other than set up the
  CRDs for family members as they are brought online and as a result
  does not require a custom configuration

New `kustomizations` are added for `compositions` and `claims`
building a dependency tree (provider > composition > claim) to ensure
all CRDs are enabled before claims can be processed.

--- a/extras/crossplane/kustomization.yaml
+++ b/extras/crossplane/kustomization.yaml
@@ -4,3 +4,5 @@ resources:
 - namespace-crossplane.yaml
 - podmonitor-crossplane.yaml
 - providers-kustomization.yaml
+- claims-kustomization.yaml
+- composition-kustomization.yaml
