--- a/extras/crossplane/composition-kustomization.yaml
+++ b/extras/crossplane/composition-kustomization.yaml
@@ -2,19 +2,19 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: crossplane-providers
+  name: crossplane-compositions
   namespace: flux-giantswarm
 spec:
   # This is needed so that crossplane and CRDs are installed first
   dependsOn:
-    - name: flux
+    - name: crossplane-providers
       namespace: flux-giantswarm
   interval: 5m
   # IMPORTANT: The `crossplane-providers` folder and the `kustomization.yaml` file must be created in the folder pointed
   # to and include providers from `extras/crossplane/providers`
   #
   # DO NOT use slashes in the comment to indicate the path, just "->".
-  path: "./management-clusters/{replaced in management-clusters -> <MC_NAME> -> kustomization.yaml}/crossplane/providers"
+  path: "./management-clusters/{replaced in management-clusters -> <MC_NAME> -> kustomization.yaml}/crossplane/compositions"
   prune: false
   retryInterval: 1m
   sourceRef:
