--- a/extras/crossplane/providers/upbound/aws/service-account.yaml
+++ b/extras/crossplane/providers/upbound/aws/service-account.yaml
@@ -2,19 +2,36 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: "replaced by kustomization"
+  name: replaced by kustomization
   namespace: crossplane
   annotations: {}
+  labels:
+    provider-family: aws
+    provider-family-member: aws-provider
+
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: upbound-provider-family-aws
+  namespace: crossplane
+  annotations: {}
+  labels:
+    provider-family: aws
+    provider-family-member: aws-family
+
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: crossplane-use-psp-upbound-provider
+  name: replaced by kustomization
+  labels:
+    psp-binding: "true"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: crossplane-use-psp
 subjects:
 - kind: ServiceAccount
-  name: "replaced by kustomization"
+  name: replaced by kustomization
   namespace: crossplane
