--- a/extras/crossplane/providers/upbound/azure/service-account.yaml
+++ b/extras/crossplane/providers/upbound/azure/service-account.yaml
@@ -2,18 +2,36 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: upbound-provider-azure
+  name: replaced by kustomization
   namespace: crossplane
+  annotations: {}
+  labels:
+    provider-family: azure
+    provider-family-member: azure-provider
+
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: upbound-provider-family-azure
+  namespace: crossplane
+  annotations: {}
+  labels:
+    provider-family: azure
+    provider-family-member: azure-family
+
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: crossplane-use-psp-upbound-provider-azure
+  name: replaced by kustomization
+  labels:
+    psp-binding: "true"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: crossplane-use-psp
 subjects:
 - kind: ServiceAccount
-  name: upbound-provider-azure
+  name: replaced by kustomization
   namespace: crossplane
