Configure baseDomain for nginx-ingress to enable external-dns for Service

--- a/bases/provider/eks/helmrelease/ingress-nginx/helmrelease.yaml
+++ b/bases/provider/eks/helmrelease/ingress-nginx/helmrelease.yaml
@@ -22,3 +22,6 @@ spec:
   install:
     remediation:
       retries: 3
+  values:
+    baseDomain: sample-customer.gaws.gigantic.io
+    provider: capa
