--- a/bases/provider/eks/helmrelease/kustomization.yaml
+++ b/bases/provider/eks/helmrelease/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- cert-manager
 - example-helmrelease-app
 - metrics-server
 - fluent-logshipping-app
