Add a kustomization to manage policy-exception

--- a/extras/vaultless/policy-exception/resource-policy-exception.yaml
+++ b/extras/vaultless/policy-exception/resource-policy-exception.yaml
@@ -10,7 +10,7 @@ metadata:
   labels:
     kustomize.toolkit.fluxcd.io/name: flux
     kustomize.toolkit.fluxcd.io/namespace: flux-giantswarm
-  name: flux-vaultless
+  name: flux-vaultless-policy-exception
   namespace: flux-giantswarm
 spec:
   force: false
