--- a/bases/catalogs/giantswarm/appcatalog-giantswarm-operations-platform.yaml
+++ b/bases/catalogs/giantswarm/appcatalog-giantswarm-operations-platform.yaml
@@ -42,4 +42,4 @@ spec:
         configMap:
           values:
             image:
-              registry: "quay.io"
+              registry: "gsoci.azurecr.io"
