--- a/bases/catalogs/giantswarm/appcatalog-releases-test.yaml
+++ b/bases/catalogs/giantswarm/appcatalog-releases-test.yaml
@@ -42,6 +42,6 @@ spec:
         configMap:
           values:
             image:
-              registry: "quay.io"
+              registry: "gsoci.azurecr.io"
             tiller:
               namespace: "giantswarm"
