Replace more registry domains to gsoci

--- a/bases/flux-app-v2/giantswarm/kustomization.yaml
+++ b/bases/flux-app-v2/giantswarm/kustomization.yaml
@@ -18,21 +18,21 @@ helmCharts:
         enabled: true
         force: true
 images:
-  - name: docker.io/giantswarm/fluxcd-helm-controller
+  - name: gsoci.azurecr.io/giantswarm/fluxcd-helm-controller
     newName: giantswarm/fluxcd-helm-controller
-  - name: docker.io/giantswarm/fluxcd-image-automation-controller
+  - name: gsoci.azurecr.io/giantswarm/fluxcd-image-automation-controller
     newName: giantswarm/fluxcd-image-automation-controller
-  - name: docker.io/giantswarm/fluxcd-image-reflector-controller
+  - name: gsoci.azurecr.io/giantswarm/fluxcd-image-reflector-controller
     newName: giantswarm/fluxcd-image-reflector-controller
-  - name: docker.io/giantswarm/fluxcd-notification-controller
+  - name: gsoci.azurecr.io/giantswarm/fluxcd-notification-controller
     newName: giantswarm/fluxcd-notification-controller
-  - name: docker.io/giantswarm/fluxcd-source-controller
+  - name: gsoci.azurecr.io/giantswarm/fluxcd-source-controller
     newName: giantswarm/fluxcd-source-controller
-  - name: docker.io/giantswarm/fluxcd-kustomize-controller
+  - name: gsoci.azurecr.io/giantswarm/fluxcd-kustomize-controller
     newName: giantswarm/kustomize-controller
-  - name: docker.io/giantswarm/k8s-jwt-to-vault-token
+  - name: gsoci.azurecr.io/giantswarm/k8s-jwt-to-vault-token
     newName: giantswarm/k8s-jwt-to-vault-token
-  - name: docker.io/giantswarm/docker-kubectl
+  - name: gsoci.azurecr.io/giantswarm/docker-kubectl
     newName: giantswarm/docker-kubectl
 patches:
 - target:
