--- a/bases/flux-app-v2/giantswarm/patch-pvc-psp.yaml
+++ b/bases/flux-app-v2/giantswarm/patch-pvc-psp.yaml
@@ -1,7 +1,7 @@
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: flux-app-pvc-psp
+  name: flux-giantswarm
   namespace: flux-giantswarm
 spec:
   volumes:
