--- a/bases/flux-app-v2/giantswarm/kustomization.yaml
+++ b/bases/flux-app-v2/giantswarm/kustomization.yaml
@@ -6,7 +6,7 @@ helmCharts:
     namespace: flux-giantswarm
     repo: https://giantswarm.github.io/giantswarm-test-catalog/
     releaseName: flux-giantswarm
-    version: 1.2.0-9e4261f2211972d6febf8bf6726f19684b4fbe16
+    version: 1.2.0-286ea15f12d2d8e7c6c6d22fff952367203eaada
     valuesInline:
       images:
         registry: gsoci.azurecr.io
@@ -43,6 +43,16 @@ patches:
     - op: replace
       path: /metadata/name
       value: crd-controller-giantswarm
+    - op: replace
+      path: /rules/10/resourceNames/0
+      value: flux-app-pvc-psp-giantswarm
+- target:
+    kind: PodSecurityPolicy
+    name: flux-app-pvc-psp
+  patch: |-
+    - op: replace
+      path: /metadata/name
+      value: flux-app-pvc-psp-giantswarm
 - target:
     kind: ClusterRoleBinding
     name: cluster-reconciler
