Add backstage label to backstage helmrelease

--- a/extras/backstage/helmrelease-backstage.yaml
+++ b/extras/backstage/helmrelease-backstage.yaml
@@ -3,6 +3,8 @@ kind: HelmRelease
 metadata:
   name: backstage
   namespace: flux-giantswarm
+  labels:
+    backstage.io/kubernetes-id: backstage
 spec:
   chart:
     spec:
@@ -18,6 +20,23 @@ spec:
       retries: 10
       remediateLastFailure: false
   interval: 1m
+  postRenderers:
+    - kustomize:
+      patchesStrategicMerge:
+        - apiVersion: apps/v1
+          kind: Deployment
+          metadata:
+            labels:
+              backstage.io/kubernetes-id: backstage
+            name: backstage
+          spec:
+            selector:
+              matchLabels:
+                backstage.io/kubernetes-id: backstage
+            template:
+              metadata:
+                labels:
+                  backstage.io/kubernetes-id: backstage
   targetNamespace: backstage
   timeout: 10m
   upgrade:
