Create the flux policy exception in the flux-giantswarm namespace

--- a/bases/flux-app-v2/giantswarm/kustomization.yaml
+++ b/bases/flux-app-v2/giantswarm/kustomization.yaml
@@ -14,6 +14,7 @@ helmCharts:
         enforce: true
       policyException:
         enforce: true
+        namespace: flux-giantswarm
       clusterRoles:
         install: false
       crds:
